tests/errors/test_20.x
// Attempting to redeclare a constant

let y: int[] = [1, 2, 3, 4, 5];

fn main() -> int {

    y[0] = 21;

    let x: int = 21;

    x += 1;

}